tests/neg-custom-args/captures/i20481.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i20481.scala:4:13 ----------------------------------------
4 |  val b: A = this // error
  |             ^^^^
  |             Found:    (A.this : A^{any})
  |             Required: A
  |
  |             Note that capability `any` is not included in capture set {}.
  |
  |             where:    any is a root capability in the type of class A
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i20481.scala:8:14 ----------------------------------------
8 |  val c1: A = a      // error
  |              ^
  |              Found:    (a : A^{any})
  |              Required: A
  |
  |              Note that capability `any` is not included in capture set {}.
  |
  |              where:    any is a root capability in the type of parameter a
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i20481.scala:10:16 ---------------------------------------
10 |  val c3: A = a.f    // error
   |              ^^^
   |              Found:    (a.f : A^{a.any})
   |              Required: A
   |
   |              Note that capability `a.any` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i20481.scala:11:23 ---------------------------------------
11 |  val f1: () -> Unit = () => println(a) // error
   |                       ^^^^^^^^^^^^^^^^
   |                       Found:    () ->{a} Unit
   |                       Required: () -> Unit
   |
   |                       Note that capability `a` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i20481.scala:13:23 ---------------------------------------
13 |  val f3: () -> Unit = () => println(a.f) // error
   |                       ^^^^^^^^^^^^^^^^^^
   |                       Found:    () ->{a.f} Unit
   |                       Required: () -> Unit
   |
   |                       Note that capability `a.f` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
